fix container overflows

--- a/public/stylesheets/partials/_base.scss
+++ b/public/stylesheets/partials/_base.scss
@@ -4,7 +4,7 @@
 @import "case";
 @import "media";
 
-* {border:1px solid red;}
+/*  {border:1px solid red;} overflow test */ 
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -22,7 +22,7 @@ html {
 body {
     height: 100%;
     min-height: 100vh;
-    min-width: 100%;
+    width: 100%;
     margin: 0;
     font-family: $sans;
     /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; todo */
